--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,33 +1,27 @@
 ---
-title: 'Introduction'
-description: 'Example section for showcasing API endpoints'
+title: 'API Overview'
+description: 'This walks you through the Artemis Search API'
 ---
 
-<Note>
-  If you're not looking to build API reference documentation, you can delete
-  this section by removing the api-reference folder.
-</Note>
+## Central API Route
 
-## Welcome
+Artemis Search provides a single API route `/fly-search` which is our central search endpoint. You can read more about the route [here](/settings/api-keys). 
 
-There are two ways to build API documentation: [OpenAPI](https://mintlify.com/docs/api-playground/openapi/setup) and [MDX components](https://mintlify.com/docs/api-playground/mdx/configuration). For the starter kit, we are using the following OpenAPI specification.
+## Base URL
 
-<Card
-  title="Plant Store Endpoints"
-  icon="leaf"
-  href="https://github.com/mintlify/starter/blob/main/api-reference/openapi.json"
->
-  View the OpenAPI specification file
-</Card>
+All requests contain the following base URL:
+```
+https://app.search-artemis.com/api
+```
 
 ## Authentication
 
-All API endpoints are authenticated using Bearer tokens and picked up from the specification file.
+All API endpoints are authenticated using Bearer tokens which contain the [API Key](/settings/api-keys).
 
-```json
-"security": [
-  {
-    "bearerAuth": []
-  }
-]
 ```
+Authorization: Bearer YOUR_ORGANIZATION_API_KEY
+```
+
+## Rate Limits
+
+Our central API endpoint `/fly-search` is limited to 30 requests per minute. Please contact us at pallavi@artemisar.com if you need to increase this limit.
