--- a/machines/manage-machines.mdx
+++ b/machines/manage-machines.mdx
@@ -13,8 +13,8 @@ To view and manage your machines:
 ## Machine Management Options
 
 <CardGroup cols={2}>
-  <Card title="Add Machine" icon="plus">
-    Add new machines to your project as needed. [Learn how to add a machine](/machines/create-a-machine)
+  <Card title="Create Machine" icon="plus">
+    Creating new machines for your project as needed. [Learn how to create a machine](/machines/create-a-machine)
   </Card>
   <Card title="Delete Machine" icon="trash">
     Remove unnecessary machines to optimize costs.
