--- a/datasets/manage-datasets.mdx
+++ b/datasets/manage-datasets.mdx
@@ -18,13 +18,13 @@ To view all datasets associated with a project:
 For each dataset, you can perform the following actions:
 
 <CardGroup cols={2}>
-  <Card title="Activate" icon="play">
+  <Card title="Activate" icon="play" href="/datasets/manage-datasets/#activating-a-dataset">
     Set a dataset as the active one for your project's searches.
   </Card>
-  <Card title="Edit" icon="pen-to-square">
+  <Card title="Edit" icon="pen-to-square" href="/datasets/manage-datasets/#editing-a-dataset">
     Modify the dataset's name or other metadata.
   </Card>
-  <Card title="Delete" icon="trash">
+  <Card title="Delete" icon="trash" href="/datasets/manage-datasets/#deleting-a-dataset">
     Remove a dataset from your project permanently.
   </Card>
 </CardGroup>
