--- a/get-started/quickstart.mdx
+++ b/get-started/quickstart.mdx
@@ -94,9 +94,7 @@ You need to activate a dataset to use it for searches in your project.
 
 ## 7. Open the playground
 
-The [playground](/playground/using-the-playground) is where you can experiment with your project.
-
-1. Click the "Playground" button in the top-right corner of the project page.
+The [playground](/playground/using-the-playground) is where you can experiment with your project. You can open the playground by clicking the "Playground" button in the top-right corner of the project page.
 
 ## 8. Run your first search
 
