--- a/machines/manage-machines.mdx
+++ b/machines/manage-machines.mdx
@@ -13,16 +13,16 @@ To view and manage your machines:
 ## Machine Management Options
 
 <CardGroup cols={2}>
-  <Card title="Create Machine" icon="plus">
+  <Card title="Create Machine" icon="plus" href="/machines/create-a-machine">
     Creating new machines for your project as needed. [Learn how to create a machine](/machines/create-a-machine)
   </Card>
-  <Card title="Delete Machine" icon="trash">
+  <Card title="Delete Machine" icon="trash" href="/machines/manage-machines/#deleting-a-machine">
     Remove unnecessary machines to optimize costs.
   </Card>
-  <Card title="Monitor Status" icon="gauge">
+  <Card title="Monitor Status" icon="gauge" href="/machines/manage-machines/#monitoring-machine-status">
     Keep track of active machines in the Project Status card.
   </Card>
-  <Card title="View Performance" icon="chart-line">
+  <Card title="View Performance" icon="chart-line" href="/machines/manage-machines/#viewing-machine-performance">
     Check machine performance in the Project Status card.
   </Card>
 </CardGroup>
