--- a/playground/using-the-playground.mdx
+++ b/playground/using-the-playground.mdx
@@ -6,9 +6,24 @@ description: "Learn how to use the Artemis Search Playground to experiment with 
 ## What is the Playground?
 The Artemis Search Playground is a powerful tool that allows you to experiment with your projects.
 
+<Note>
+  You can only use the Playground with an active project. This means that the project has an activated dataset and at least one machine added.
+</Note>
+
 ## Accessing the Playground
 
-To access the Playground:
+To access the Playground, you can either:
+
+<Steps>
+  <Step title="Open the Playground">
+    Click on the "Playground" button in the navigation bar at the top of the page.
+  </Step>
+  <Step title="Select your project">
+    Select your project from the dropdown menu under 'Project'.
+  </Step>
+</Steps>
+
+or
 
 <Steps>
   <Step title="Navigate to your project">
@@ -63,7 +78,7 @@ The Playground is divided into two main sections:
     Click the 'Complete Search' button to run your search.
 
     <Tip>
-      The search will take between 5-20 seconds to complete. If this is your first time running a search, it may take longer as your machines are spun up.
+      The search will take between 5-20 seconds to complete. If this is your first time running a search, it may take longer as your machines are being spun up.
     </Tip>
   </Step>
   <Step title="Review results">
