--- a/api-reference/endpoint/search.mdx
+++ b/api-reference/endpoint/search.mdx
@@ -82,7 +82,9 @@ fetch('https://app.search-artemis.com/api/fly-search', {
     projectId: 'YOUR_PROJECT_ID',
     searchQuery: 'companies that require HIPAA compliance',
     numberOfBatches: 50,
-    topK: 4
+    topK: 4,
+    clearFlag: true,
+    apiKey: 'YOUR_API_KEY'
   })
 })
 .then(response => response.json())
