--- a/api-reference/endpoint/search.mdx
+++ b/api-reference/endpoint/search.mdx
@@ -72,7 +72,7 @@ openapi: 'POST /fly-search'
 
 <RequestExample>
 ```js Example Request
-fetch('https://app.search-artemis.com/api/fly-search', {
+fetch('https://api.search-artemis.com/api/fly-search', {
   method: 'POST',
   headers: {
     'Authorization': `Bearer YOUR_API_KEY`,
