--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -5,7 +5,7 @@ description: 'This walks you through the Artemis Search API'
 
 ## Central API Route
 
-Artemis Search provides a single API route `/fly-search` which is our central search endpoint. You can read more about the route [here](/settings/api-keys). 
+Artemis Search provides a single API route `/search` which is our central search endpoint. You can read more about the route [here](/settings/api-keys). 
 
 ## Base URL
 
@@ -24,4 +24,4 @@ Authorization: Bearer YOUR_ORGANIZATION_API_KEY
 
 ## Rate Limits
 
-Our central API endpoint `/fly-search` is limited to 30 requests per minute. Please contact us at pallavi@artemisar.com if you need to increase this limit.
+Our central API endpoint `/search` is limited to 30 requests per minute. Please contact us at pallavi@artemisar.com if you need to increase this limit.
