--- a/settings/api-keys.mdx
+++ b/settings/api-keys.mdx
@@ -21,7 +21,7 @@ To authenticate API requests, include your API key in the `Authorization` header
 
 
 ```javascript
-fetch('https://api.search-artemis.com/api/fly-search', {
+fetch('https://api.search-artemis.com/search', {
   method: 'POST',
   headers: {
     'Authorization': `Bearer YOUR_API_KEY`,
