--- a/api-reference/endpoint/search.mdx
+++ b/api-reference/endpoint/search.mdx
@@ -1,6 +1,6 @@
 ---
-title: '/fly-search'
-openapi: 'POST /fly-search'
+title: '/search'
+openapi: 'POST /search'
 ---
 
 ## Header
@@ -72,7 +72,7 @@ openapi: 'POST /fly-search'
 
 <RequestExample>
 ```js Example Request
-fetch('https://api.search-artemis.com/api/fly-search', {
+fetch('https://api.search-artemis.com/search', {
   method: 'POST',
   headers: {
     'Authorization': `Bearer YOUR_API_KEY`,
