--- a/datasets/understanding-datasets.mdx
+++ b/datasets/understanding-datasets.mdx
@@ -73,6 +73,7 @@ Suppose we have the following dataset stored in a Pandas dataframe:
   
     ```python
     import pandas as pd
+    from openai import OpenAI
 
     # Load Initial Dataframe
     df = pd.read_csv('company_descriptions.csv')
