--- a/settings/account-settings.mdx
+++ b/settings/account-settings.mdx
@@ -42,7 +42,9 @@ description: "Manage your Artemis Search account settings"
   </Accordion> 
  </AccordionGroup> 
 
+
 ## Delete Account
+Test
 
 If you wish to delete your account, please follow these steps:
 
