--- a/get-started/quickstart.mdx
+++ b/get-started/quickstart.mdx
@@ -60,7 +60,7 @@ If you'd like to upload your own dataset, follow these steps:
 
 1. Click the "Add Dataset" button at the bottom of the "Datasets" table.
 2. Enter a name for your dataset.
-3. Click on the "Choose File" button and upload your dataset. This dataset must be a pickled pandas dataframe with an "embedding" column (containing OpenAI text-large-3 embeddings) and a "tag" column (containing associated string values).
+3. Click on the "Choose File" button and upload your dataset. This dataset must be a pandas dataframe saved as a parquet file with an "embedding" column (containing OpenAI text-large-3 embeddings) and a "tag" column (containing associated string values).
 4. Finally, click on the "Add Dataset" button.
 5. This may take a few minutes to complete. Once the dataset is ready, you should see it appear in the "Datasets" table.
 
