--- a/projects/manage-projects.mdx
+++ b/projects/manage-projects.mdx
@@ -38,7 +38,7 @@ In order to manage your project, you'll first have to access it. Simply navigate
   4. Wait for the upload to complete (stay on the page during this process)
 
   <Note>
-    Each dataset must be a pickled pandas dataframe with an "embedding" column (containing OpenAI text-large-3 embeddings) and a "tag" column (containing associated string values).
+    Each dataset must be a pandas dataframe saved as a parquet file with an "embedding" column (containing OpenAI text-large-3 embeddings) and a "tag" column (containing associated string values).
   </Note>
 </Accordion>
 
