--- a/get-started/key-concepts.mdx
+++ b/get-started/key-concepts.mdx
@@ -99,7 +99,7 @@ Artemis Search provides a RESTful API for seamless integration with your applica
 
 <Accordion title="How to use the API?">
   - Each organization has its own API key for authentication.
-  - The main endpoint is `/search`, which accepts parameters like `search_query`, `num_batches`, `clear_flag`, and `top_k`.
+  - The main endpoint is `/search`, which accepts parameters like `search_query`, `num_batches`, `top_k`, `filter_query`, and `project_id`.
   - API requests must include your API token in the Authorization header.
 
 For detailed API documentation, check out our [API Reference](/api-reference) section.
